Added getTrend and getAvg alse modified the tests